force-app/main/default/objects/sugati__Group_Member_Room_Choice__c/sugati__Group_Member_Room_Choice__c.object-meta.xml
<CustomObject>
    <label>Group Member Room Choice</label>
    <nameField>
        <displayFormat>GMRC-{0000000}</displayFormat>
        <label>Group Member Room Choice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Member Room Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>