force-app/main/default/objects/sugati__Group_Member_Room_Choice__c/fields/sugati__S_GMRC_Day__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GMRC_Day__c</fullName>
    <formula>sugati__S_GMRC_Supplier_Booking__r.sugati__SB_Day__c</formula>
    <label>Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>