force-app/main/default/objects/sugati__Group_Member_Room_Choice__c/fields/sugati__S_GMRC_From_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GMRC_From_Date__c</fullName>
    <formula>sugati__S_GMRC_Supplier_Booking__r.sugati__SB_From_Date__c</formula>
    <label>From Date</label>
    <type>Date</type>
</CustomField>