force-app/main/default/objects/sugati__Group_Member_Room_Choice__c/fields/sugati__S_GMRC_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GMRC_Group_Member__c</fullName>
    <label>Group Member</label>
    <referenceTo>sugati__Group_Member__c</referenceTo>
    <relationshipLabel>Group Member Room Choices</relationshipLabel>
    <relationshipName>Group_Member_Room_Choices</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>