force-app/main/default/objects/sugati__Group_Member_Room_Choice__c/fields/sugati__S_GMRC_Group_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GMRC_Group_Member_Name__c</fullName>
    <formula>sugati__S_GMRC_Group_Member__r.sugati__GM_Name__c</formula>
    <label>Group Member Name</label>
    <type>Text</type>
</CustomField>