force-app/main/default/objects/sugati__Group_Member_Room_Choice__c/fields/sugati__S_GMRC_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GMRC_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Group Member Room Choices</relationshipLabel>
    <relationshipName>Group_Member_Room_Choices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>