force-app/main/default/objects/sugati__Group_Member_Room_Choice__c/fields/sugati__S_GMRC_Price_Override__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GMRC_Price_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Override</label>
    <referenceTo>sugati__Price_Override__c</referenceTo>
    <relationshipLabel>Group Member Room Choices</relationshipLabel>
    <relationshipName>Group_Member_Room_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>