force-app/main/default/objects/sugati__Group_Member_Room_Choice__c/fields/sugati__S_GMRC_Room_Sharing_Partner_Preference__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GMRC_Room_Sharing_Partner_Preference__c</fullName>
    <label>Room Sharing Partner Preference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>