force-app/main/default/objects/sugati__Group_Member_Room_Choice__c/fields/sugati__S_GMRC_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GMRC_Supplier_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Group Member Room Choices</relationshipLabel>
    <relationshipName>Group_Member_Room_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>