force-app/main/default/objects/sugati__Group_Member_Room_Choice__c/fields/sugati__S_GMRC_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_GMRC_Supplier_Name__c</fullName>
    <formula>sugati__S_GMRC_Supplier_Booking__r.sugati__SB_Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>